# basic-common-crawl-pipeline

./: .gitignore  Cargo.toml  Dockerfile.autometrics  Dockerfile.batcher  Dockerfile.worker  Readme.md  compose.yaml  docker-compose.yaml  run.sh
.github/: dependabot.yml
golang/: go.mod  go.sum
golang/batcher/: batcher.go
golang/cmd/batcher/: main.go
golang/cmd/worker/: main.go
golang/common/: types.go
golang/commoncrawl/: commoncrawl.go
golang/rabbitmq/: rabbitmq.go
golang/worker/: worker.go
pipeline/: Cargo.toml
pipeline/src/: cdx.rs  lib.rs  main.rs  rabbitmq.rs  tracing_and_metrics.rs
prometheus/: scrape_configs.yml
python/: .dockerignore  .env.example  .pre-commit-config.yaml  Makefile  README.md  batcher.py  commoncrawl.py  deploy.sh  docker-compose.yml  minio_client.py  minio_consumer.py  minio_uploader.py  parquet_buffer.py  pyproject.toml  rabbitmq.py  requirements.txt  storage.py  test_batcher.py  uploader.py  worker.py
python/deployment/: README.md  env-example
python/deployment/docker/: Dockerfile.batcher  Dockerfile.worker  docker-compose.yaml
python/deployment/kubernetes/: README.md  batcher.yaml  configmap.yaml  minio.yaml  namespace.yaml  port-forward.sh  prometheus.yaml  rabbitmq.yaml  services-production.yaml  worker.yaml
python/deployment/scripts/: run_docker.sh  run_k8.sh  run_local.sh
python/docs/: architecture.md  development.md  setup.md
python/filters/: abc_filters.py  document_length.py  language.py  line_wise.py
python/pipelines/: config.yaml  pipeline.py
python/src/commoncrawl_pipeline/: __init__.py  batcher.py  commoncrawl.py  rabbitmq.py  worker.py
python/tests/: test_batcher.py
rust/: Cargo.toml
rust/src/: commoncrawl.rs  lib.rs  rabbitmq.rs  tracing_and_metrics.rs  trafilatura.rs
src/: commoncrawl.rs  extract_text.py  lib.rs  rabbitmq.rs  tracing_and_metrics.rs  trafilatura.rs
tests/: batcher_tests.rs
