[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
autometrics = { version = "2.0.0", features = ["prometheus-exporter"] }
axum = "0.7.7"
clap = { version = "4.5.21", features = ["derive"] }
flate2 = "1.0.35"
futures-util = "0.3.31"
lapin = "2.5.0"
once_cell = "1.20.2"
pyo3 = { version = "0.23.1", features = ["auto-initialize"] }
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
warc = "0.3.3"
