[project]
name = "commoncrawl-pipeline"
version = "0.1.0"
description = "A pipeline for processing Common Crawl data with batcher and worker components"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Arnab Roy", email = "trifiasco@gmail.com" }
]
# Runtime dependencies
dependencies = [
    "trafilatura>=1.6.0",
    "pika>=1.3.0",
    "prometheus-client>=0.19.0",
    "requests>=2.31.0",
    "warcio>=1.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "types-requests>=2.31.0",
]

# CLI entry points for the batcher and worker
[project.scripts]
cc-batcher = "commoncrawl_pipeline.batcher:main"
cc-worker = "commoncrawl_pipeline.worker:main"

# Build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling configuration - use src-layout
[tool.hatchling.build.targets.wheel]
packages = ["src/commoncrawl_pipeline"]

# Ruff configuration (linter + formatter)
[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
# Enable recommended rules + additional best practices
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "SIM115", # Use context manager for opening files (we have __del__)
    "PTH123", # Use Path.open() - overly strict, plain open() is fine
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Mypy configuration (type checking)
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = false
disallow_untyped_defs = false

# Ignore missing imports for third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "trafilatura.*",
    "warcio.*",
    "pika.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
