[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.8.6"
clap = { version = "4.5.15", features = ["derive"] }
flate2 = "1.0.31"
futures-util = "0.3.30"
lapin = "3.7.2"
lazy_static = "1.5.0"
once_cell = "1.19.0"
prometheus = "0.14"
pyo3 = { version = "0.27.1", features = ["auto-initialize"] }
reqwest = "0.12.5"
serde = { version = "1.0.205", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
warc = "0.4"
