[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.8.8"
clap = { version = "4.5.53", features = ["derive"] }
flate2 = "1.0.31"
futures-util = "0.3.30"
lapin = "3.7.2"
lazy_static = "1.5.0"
once_cell = "1.19.0"
prometheus = "0.14"
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
reqwest = "0.12.28"
serde = { version = "1.0.205", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.148"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
warc = "0.4"
